--- a/app/src/main/res/drawable/rectangle2.xml
+++ b/app/src/main/res/drawable/rectangle2.xml
@@ -7,7 +7,7 @@
                 android:height="310dp"/>
             <solid android:color="#E8E4E4" />
             <stroke android:color="#808080" />
-            <corners android:topRightRadius="20dp" android:bottomRightRadius="20dp"/>
+            <corners android:radius="20dp" />
         </shape>
     </item>
     <!-- White foreground. -->
@@ -18,7 +18,7 @@
                 android:height="310dp"/>
             <solid android:color="@android:color/white" />
             <stroke android:color="#DADADA" />
-            <corners android:topRightRadius="20dp" android:bottomRightRadius="20dp"/>
+            <corners android:radius="20dp" />
         </shape>
     </item>
 </layer-list>
