--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,14 +49,30 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/rectangle" />
 
-                <ImageButton
-                    android:id="@+id/login"
+
+                <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_arrow_circle_right_24"
-                    android:background="@null"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:src="@drawable/baseline_circle_24"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"/>
+
+                    <!-- The image button -->
+                    <ImageButton
+                        android:id="@+id/login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/baseline_arrow_circle_right_24"
+                        android:background="@null"
+                        android:layout_gravity="center"/>
+                </FrameLayout>
+
 
             </RelativeLayout>
 
