--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -48,4 +48,9 @@
         android:text="@string/bottom_title"
         android:textAppearance="@style/bottom_title" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signup"/>
+
 </RelativeLayout>
