--- a/app/src/main/res/layout/activity_donationselection.xml
+++ b/app/src/main/res/layout/activity_donationselection.xml
@@ -17,7 +17,7 @@
         android:src="@drawable/img1" />
 
     <TextView
-        android:id="@+id/some_id"
+        android:id="@+id/selectedtitle"
         android:layout_width="330dp"
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
