--- a/app/src/main/res/layout/activity_signupstep.xml
+++ b/app/src/main/res/layout/activity_signupstep.xml
@@ -158,6 +158,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/passwordchecklayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -183,6 +184,18 @@
                     android:layout_height="wrap_content"
                     android:hint="password 확인"/>
             </LinearLayout>
+
+            <Button
+                android:id="@+id/tologinpbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:text="@string/tologin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/passwordchecklayout"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
