--- a/app/src/main/res/layout/activity_signupstep.xml
+++ b/app/src/main/res/layout/activity_signupstep.xml
@@ -109,7 +109,7 @@
                 android:layout_marginBottom="10dp"
                 android:paddingLeft="20dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="16dp"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
@@ -137,7 +137,7 @@
                 android:layout_marginBottom="10dp"
                 android:paddingLeft="20dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
@@ -157,6 +157,18 @@
                     android:hint="Password"/>
             </LinearLayout>
 
+            <TextView
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:text="@string/passwordneed"
+                android:layout_marginBottom="10dp"
+                android:paddingLeft="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/passwordlayout"/>
+
             <LinearLayout
                 android:id="@+id/passwordchecklayout"
                 android:layout_width="match_parent"
@@ -165,7 +177,7 @@
                 android:layout_marginBottom="10dp"
                 android:paddingLeft="20dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="33dp"
                 android:layout_marginEnd="16dp"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
@@ -333,11 +345,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginEnd="16dp"
-                android:text="회원가입에 성공했습니다! "
+                android:text="회원가입 입력이 끝났습니다! "
                 android:textAlignment="center"
-                android:textSize="18sp"
+                android:textSize="8sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
