--- a/app/src/main/res/layout/activity_donatepay.xml
+++ b/app/src/main/res/layout/activity_donatepay.xml
@@ -173,6 +173,7 @@
                     android:background="@drawable/textbox"
                     android:paddingLeft="5dp"
                     android:hint="계좌번호"
+                    android:inputType="number"
                     android:textSize="15dp"
                     android:padding="10dp"/>
 
@@ -246,6 +247,7 @@
                 android:hint="메세지 입력"
                 android:textSize="15dp"
                 android:padding="10dp"
+                android:inputType="textCapSentences|textAutoCorrect"
                 android:gravity="start"/>
         </RelativeLayout>
     </LinearLayout>
