feat : 입금 여부 확인 text view 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="colorLightGrayMore">#FDFDFD</color>
     <color name="colorGray">#8F8F8F</color>
 
+    <color name="green">#40e600</color>
+    <color name="red">#e60040</color>
+
 </resources>
