--- a/app/src/main/res/layout/item_mydon.xml
+++ b/app/src/main/res/layout/item_mydon.xml
@@ -30,13 +30,44 @@
         android:paddingRight="10dp"
         android:paddingLeft="10dp"
         android:layout_marginBottom="10dp">
-        <TextView
-            android:id="@+id/Title"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="아메리칸 스나이퍼"
-            android:textSize="18dp"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아메리칸 스나이퍼"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_alignParentEnd="true">
+
+                    <TextView
+                        android:id="@+id/deposit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="입금 여부 연결 "
+                        android:textSize="15dp"
+                        tools:ignore="TextSizeCheck"
+                        android:layout_gravity="end"/>
+                </LinearLayout>
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/donLoc"
