--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -123,6 +123,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/textbox"
+                    android:inputType="text"
                     android:paddingLeft="5dp" />
 
                 <TextView
@@ -172,6 +173,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginTop="15dp"
+                    android:gravity="start"
+                    android:paddingTop="10dp"
                     android:background="@drawable/textbox"
                     android:paddingLeft="5dp" />
 
@@ -196,8 +199,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
+                    android:inputType="number"
                     android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -210,19 +215,23 @@
 
 
             <RelativeLayout
+                android:id="@+id/startofdonation"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
 
-                <EditText
+                <TextView
                     android:id="@+id/startDateEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
+                    android:inputType="date"
+                    android:textSize="20dp"
                     android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
+                    android:paddingTop="10dp"
+                    android:paddingLeft="10dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -234,19 +243,23 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/endofdonation"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
 
-                <EditText
+                <TextView
                     android:id="@+id/endDateEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
+                    android:inputType="date"
+                    android:textSize="20dp"
                     android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
+                    android:paddingTop="10dp"
+                    android:paddingLeft="10dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
