--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -119,6 +119,7 @@
                 android:layout_marginBottom="10dp">
 
                 <EditText
+                    android:id="@+id/registertitle"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
@@ -170,6 +171,7 @@
                 android:layout_marginBottom="10dp">
 
                 <EditText
+                    android:id="@+id/registerDescription"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginTop="15dp"
@@ -271,6 +273,7 @@
             </RelativeLayout>
 
             <CheckBox
+                android:id="@+id/registerAgree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
