--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="25dp"
-                android:text="@string/add_title"
+                android:text="@string/org"
                 android:textAppearance="@style/title" />
         </LinearLayout>
 
@@ -59,16 +59,5 @@
         </ScrollView>
 
     </LinearLayout>
->
-    <Button
-        android:id="@+id/donBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/donation_btn"
-        android:text="기부 등록하기"
-        android:textColor="@color/white"
-        android:textSize="15dp" />
 
 </FrameLayout>
