--- a/app/src/main/res/layout/activity_donatepay.xml
+++ b/app/src/main/res/layout/activity_donatepay.xml
@@ -143,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="환불 받을 본인 명의의 계좌를 함께 입력해 주세요."
+            android:text="@string/pay"
             android:textColor="#000000"
             android:textSize="12sp"
             tools:ignore="MissingConstraints"
