--- a/app/src/main/res/layout/activity_donationselection.xml
+++ b/app/src/main/res/layout/activity_donationselection.xml
@@ -3,186 +3,245 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center">
 
-    <ImageButton
-        android:id="@+id/selecteddonation"
-        android:layout_width="330dp"
-        android:layout_height="280dp"
-        android:background="@drawable/rounded_btn"
-        android:clipToOutline="true"
-        android:padding="0dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img1" />
-
-    <TextView
-        android:id="@+id/selectedtitle"
-        android:layout_width="330dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:text="@string/donationName"
-        android:textAppearance="@style/donationName"
-        android:gravity="top"
-        android:textStyle="bold"
-        />
-
-    <RelativeLayout
-        android:layout_width="330dp"
-        android:layout_height="30dp">
-
-        <TextView
-            android:id="@+id/goal"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/goal"
-            android:textAppearance="@style/goal"
-            android:gravity="center_vertical"
-            android:layout_alignParentStart="true"
-            />
-
-        <TextView
-            android:id="@+id/company"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/company"
-            android:textAppearance="@style/company"
-            android:gravity="center_vertical"
-            android:layout_alignParentEnd="true"
-            />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/donationContent"
-        android:layout_width="330dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="5dp"
-        android:text="@string/donationContent"
-        android:textAppearance="@style/donationContent"
-        android:gravity="top"
-        />
-
-    <RelativeLayout
-        android:layout_width="330dp"
-        android:layout_height="30dp">
-
-        <TextView
-            android:id="@+id/numPeople"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/numPeople"
-            android:textAppearance="@style/numPeople"
-            android:gravity="center_vertical"
-            android:layout_alignParentStart="true"
-            />
-
-        <TextView
-            android:id="@+id/nowDonate"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/nowDonate"
-            android:textAppearance="@style/nowDonate"
-            android:gravity="center_vertical"
-            android:layout_alignParentEnd="true"
-            />
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="330dp"
-        android:layout_height="30dp">
-
-    <RelativeLayout
-        android:layout_width="140dp"
-        android:layout_height="30dp">
-
-<!--        <ImageView-->
-<!--            android:layout_width="30dp"-->
-<!--            android:layout_height="30dp"-->
-<!--            android:background="@drawable/profile1" />-->
-
-<!--        <ImageView-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/profile2" />-->
-
-<!--        <ImageView-->
-<!--            android:layout_width="80dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/profile3" />-->
-
-<!--        <ImageView-->
-<!--            android:layout_width="110dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/profile4" />-->
-
-<!--        <ImageView-->
-<!--            android:layout_width="140dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/profile5" />-->
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="2dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/white"
-            android:src="@drawable/profile1"
-            android:layout_width="30dp"
-            android:layout_height="140dp"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="2dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/white"
-            android:src="@drawable/profile2"
-            android:layout_width="60dp"
-            android:layout_height="140dp"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="3dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/white"
-            android:src="@drawable/profile4"
-            android:layout_width="90dp"
-            android:layout_height="140dp"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="2dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/white"
-            android:src="@drawable/profile4"
-            android:layout_width="120dp"
-            android:layout_height="140dp"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_width="2dp"
-            app:civ_fill_color="#23f22f"
-            app:civ_border_color="@color/white"
-            android:src="@drawable/profile5"
-            android:layout_width="150dp"
-            android:layout_height="140dp"/>
-    </RelativeLayout>
-
-        <TextView
-            android:id="@+id/nowDonate_Num"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:text="@string/nowDonate_Num"
-            android:textAppearance="@style/nowDonate_Num"
-            android:gravity="center_vertical"
-            android:layout_alignParentEnd="true"
-            />
-
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/selectdonatebtn"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_btn"
-        android:textColor="#FFFFFF"
-        android:text="@string/donateBtn"
-        android:textSize="15sp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:orientation="vertical">
 
+        <ImageButton
+            android:id="@+id/selecteddonation"
+            android:layout_width="330dp"
+            android:layout_height="280dp"
+            android:background="@drawable/rounded_btn"
+            android:clipToOutline="true"
+            android:padding="0dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img1" />
+
+        <TextView
+            android:id="@+id/selectedtitle"
+            android:layout_width="330dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/donationName"
+            android:textAppearance="@style/donationName"
+            android:gravity="top"
+            android:textStyle="bold"
+            />
+        <LinearLayout
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/goal"
+                        android:textAppearance="@style/goal"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentStart="true"/>
+                    <TextView
+                        android:id="@+id/goal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="500,000원"
+                        android:textAppearance="@style/goal"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentStart="true"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/enddate"
+                        android:textAppearance="@style/goal"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentStart="true"/>
+                    <TextView
+                        android:id="@+id/enddate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="23.05.21"
+                        android:textAppearance="@style/goal"
+                        android:gravity="center_vertical"
+                        android:layout_alignParentStart="true"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_alignParentEnd="true">
+
+                    <TextView
+                        android:id="@+id/company"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="유니셰프코리아"
+                        android:textSize="13dp"
+                        tools:ignore="TextSizeCheck"
+                        android:layout_gravity="end"/>
+                </LinearLayout>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/donationContent"
+            android:layout_width="330dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/donationContent"
+            android:textAppearance="@style/donationContent"
+            android:gravity="top"
+            />
+
+        <RelativeLayout
+            android:layout_width="330dp"
+            android:layout_height="30dp">
+
+            <TextView
+                android:id="@+id/numPeople"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="@string/numPeople"
+                android:textAppearance="@style/numPeople"
+                android:gravity="center_vertical"
+                android:layout_alignParentStart="true"
+                />
+
+            <TextView
+                android:id="@+id/nowDonate"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="@string/nowDonate"
+                android:textAppearance="@style/nowDonate"
+                android:gravity="center_vertical"
+                android:layout_alignParentEnd="true"
+                />
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="330dp"
+            android:layout_height="30dp">
+
+        <RelativeLayout
+            android:layout_width="140dp"
+            android:layout_height="30dp">
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="30dp"-->
+    <!--            android:layout_height="30dp"-->
+    <!--            android:background="@drawable/profile1" />-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="50dp"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:src="@drawable/profile2" />-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="80dp"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:src="@drawable/profile3" />-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="110dp"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:src="@drawable/profile4" />-->
+
+    <!--        <ImageView-->
+    <!--            android:layout_width="140dp"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:src="@drawable/profile5" />-->
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/profile1"
+                android:layout_width="30dp"
+                android:layout_height="140dp"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/profile2"
+                android:layout_width="60dp"
+                android:layout_height="140dp"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="3dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/profile4"
+                android:layout_width="90dp"
+                android:layout_height="140dp"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/profile4"
+                android:layout_width="120dp"
+                android:layout_height="140dp"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="2dp"
+                app:civ_fill_color="#23f22f"
+                app:civ_border_color="@color/white"
+                android:src="@drawable/profile5"
+                android:layout_width="150dp"
+                android:layout_height="140dp"/>
+        </RelativeLayout>
+
+            <TextView
+                android:id="@+id/nowDonate_Num"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:text="@string/nowDonate_Num"
+                android:textAppearance="@style/nowDonate_Num"
+                android:gravity="center_vertical"
+                android:layout_alignParentEnd="true"
+                />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/selectdonatebtn"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_btn"
+            android:textColor="#FFFFFF"
+            android:text="@string/donateBtn"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_marginTop="10dp"/>
+
+    </LinearLayout>
 </LinearLayout>
