feat : 프로필 이미지 uri 더미

--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/titlelayout"
-        android:layout_centerInParent="true" /> <!-- Adjust this margin value as needed -->
+        android:layout_centerInParent="true" />
 
     <TextView
         android:id="@+id/bottom_title"
