--- a/app/src/main/res/layout/activity_donationselection.xml
+++ b/app/src/main/res/layout/activity_donationselection.xml
@@ -53,15 +53,16 @@
                         android:textAppearance="@style/goal"
                         android:gravity="center_vertical"
                         android:layout_alignParentStart="true"/>
+
                     <TextView
                         android:id="@+id/goal"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentStart="true"
                         android:layout_marginLeft="2dp"
-                        android:text="500,000원"
-                        android:textAppearance="@style/goal"
                         android:gravity="center_vertical"
-                        android:layout_alignParentStart="true"/>
+                        android:text="500,000원"
+                        android:textAppearance="@style/goal" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -74,15 +75,16 @@
                         android:textAppearance="@style/goal"
                         android:gravity="center_vertical"
                         android:layout_alignParentStart="true"/>
+
                     <TextView
                         android:id="@+id/enddate"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="18dp"
+                        android:layout_alignParentStart="true"
                         android:layout_marginLeft="2dp"
-                        android:text="23.05.21"
-                        android:textAppearance="@style/goal"
                         android:gravity="center_vertical"
-                        android:layout_alignParentStart="true"/>
+                        android:text="23.05.21"
+                        android:textAppearance="@style/goal" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -150,78 +152,23 @@
             android:layout_width="330dp"
             android:layout_height="30dp">
 
-        <RelativeLayout
-            android:layout_width="140dp"
-            android:layout_height="30dp">
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <!--        <ImageView-->
-    <!--            android:layout_width="30dp"-->
-    <!--            android:layout_height="30dp"-->
-    <!--            android:background="@drawable/profile1" />-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewmain"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/titlelayout"
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal" />
 
-    <!--        <ImageView-->
-    <!--            android:layout_width="50dp"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:src="@drawable/profile2" />-->
-
-    <!--        <ImageView-->
-    <!--            android:layout_width="80dp"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:src="@drawable/profile3" />-->
-
-    <!--        <ImageView-->
-    <!--            android:layout_width="110dp"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:src="@drawable/profile4" />-->
-
-    <!--        <ImageView-->
-    <!--            android:layout_width="140dp"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:src="@drawable/profile5" />-->
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="2dp"
-                app:civ_fill_color="#23f22f"
-                app:civ_border_color="@color/white"
-                android:src="@drawable/profile1"
-                android:layout_width="30dp"
-                android:layout_height="140dp"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="2dp"
-                app:civ_fill_color="#23f22f"
-                app:civ_border_color="@color/white"
-                android:src="@drawable/profile2"
-                android:layout_width="60dp"
-                android:layout_height="140dp"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="3dp"
-                app:civ_fill_color="#23f22f"
-                app:civ_border_color="@color/white"
-                android:src="@drawable/profile4"
-                android:layout_width="90dp"
-                android:layout_height="140dp"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="2dp"
-                app:civ_fill_color="#23f22f"
-                app:civ_border_color="@color/white"
-                android:src="@drawable/profile4"
-                android:layout_width="120dp"
-                android:layout_height="140dp"/>
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="2dp"
-                app:civ_fill_color="#23f22f"
-                app:civ_border_color="@color/white"
-                android:src="@drawable/profile5"
-                android:layout_width="150dp"
-                android:layout_height="140dp"/>
-        </RelativeLayout>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/nowDonate_Num"
+                android:id="@+id/current"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/nowDonate_Num"
