--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -33,6 +33,7 @@
                 android:layout_margin="10dp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile"
                     android:layout_margin="10dp"
                     app:civ_border_width="2dp"
                     app:civ_fill_color="#23f22f"
