--- a/app/src/main/res/drawable/textbox.xml
+++ b/app/src/main/res/drawable/textbox.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:width="2dp"
-        android:color="#03A6F0" />
+        android:width="1dp"
+        android:color="#E3E3E3" />
 
     <corners android:radius="12dp" />
 </shape>
