--- a/app/src/main/res/layout/activity_donatepay.xml
+++ b/app/src/main/res/layout/activity_donatepay.xml
@@ -119,7 +119,7 @@
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
-            android:layout_width="310dp"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_centerInParent="true"
             android:background="#F3F3F3"
@@ -140,12 +140,14 @@
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/pay"
             android:textColor="#000000"
             android:textSize="12sp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="55dp"
             tools:layout_editor_absoluteY="360dp" />
