--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -19,14 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="20dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/titleadd"
                 android:textSize="15dp"
-                android:textAppearance="@style/title" />
+                android:textAppearance="@style/title"
+                android:layout_marginTop="5dp"/>
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
@@ -35,7 +36,8 @@
                 android:textStyle="bold"
                 android:textSize="25dp"
                 android:text="@string/org"
-                android:textAppearance="@style/title" />
+                android:textAppearance="@style/title"
+                android:layout_marginBottom="5dp"/>
         </LinearLayout>
 
         <ScrollView
@@ -51,7 +53,7 @@
                 android:layout_margin="1dp">
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
+                    android:layout_width="360dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"/>
 
