--- a/app/src/main/res/layout/item_mydon.xml
+++ b/app/src/main/res/layout/item_mydon.xml
@@ -9,8 +9,10 @@
     android:orientation="vertical"
     android:background="@drawable/rounded_box"
     android:layout_marginBottom="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     tools:ignore="MissingDefaultResource"
-    android:layout_margin="10dp">
+    android:layout_marginTop="10dp">
 
     <ImageButton
         android:id="@+id/participatedimage"
